feat(memory-cpu): add memory and CPU monitory
